--- a/index.html
+++ b/index.html
@@ -8,12 +8,23 @@
 .auto-style1 {
 	text-align: center;
 }
+.auto-style2 {
+	font-family: Calibri;
+}
+.auto-style3 {
+	text-decoration: none;
+}
 </style>
 </head>
 
 <body>
 
 <div class="auto-style1">
+
+	<span class="auto-style2">Botany IoT | about |
+	<a class="auto-style3" href="http://botaniot.wordpress.com" target="_blank">
+	blog</a> | contact<br />
+	</span><br />
 
 <img src="https://www.dropbox.com/s/z1i9xvsvzlf6mtm/botaniotmonitor.png?raw=1" alt="BotanIoT Update">
 </div>
