--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div class="auto-style1">
 
-	<span class="auto-style2">Botany IoT | about |
+	<span class="auto-style2">BotanIoT | about |
 	<a class="auto-style3" href="http://botaniot.wordpress.com" target="_blank">
 	blog</a> | contact<br />
 	</span><br />
