--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+
 <title>BotanIoT | Pushkar Sheth</title>
 <style type="text/css">
 .auto-style1 {
@@ -28,6 +29,7 @@
 
 <img src="https://www.dropbox.com/s/z1i9xvsvzlf6mtm/botaniotmonitor.png?raw=1" alt="BotanIoT Update">
 </div>
+<meta http-equiv="refresh" content="30">
 </body>
 
 </html>
